--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,8 @@
 	</parent>
 
 	<modules>
-		<module>shareit-server</module>
-		<module>shareit-gateway</module>
+		<module>server</module>
+		<module>gateway</module>
 	</modules>
 
 	<properties>
