--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,12 @@
 
 	<name>shareit-parent</name>
 
+	<profiles>
+		<profile>
+			<id>check</id>
+		</profile>
+	</profiles>
+
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
