--- a/server/src/test/resources/application.properties
+++ b/server/src/test/resources/application.properties
@@ -12,3 +12,7 @@ spring.sql.init.data-locations=classpath:data.sql
 spring.jpa.show-sql=false
 logging.level.org.hibernate.SQL=WARN
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=WARN
+
+management.endpoints.web.exposure.include=health
+management.endpoints.web.base-path=/actuator
+management.endpoint.health.probes.enabled=true
